; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/extr_usb.c__usb_write_async.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/extr_usb.c__usb_write_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }

@REALTEK_USB_VENQT_CMD_REQ = common dso_local global i32 0, align 4
@REALTEK_USB_VENQT_CMD_IDX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_device*, i32, i32, i64)* @_usb_write_async to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_usb_write_async(%struct.usb_device* %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca %struct.usb_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.usb_device* %0, %struct.usb_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  %13 = load i32, i32* @REALTEK_USB_VENQT_CMD_REQ, align 4
  store i32 %13, i32* %9, align 4
  %14 = load i64, i64* @REALTEK_USB_VENQT_CMD_IDX, align 8
  store i64 %14, i64* %11, align 8
  %15 = load i32, i32* %6, align 4
  %16 = and i32 %15, 65535
  %17 = sext i32 %16 to i64
  store i64 %17, i64* %10, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @cpu_to_le32(i32 %18)
  store i32 %19, i32* %12, align 4
  %20 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %21 = load i32, i32* %9, align 4
  %22 = load i64, i64* %10, align 8
  %23 = load i64, i64* %11, align 8
  %24 = load i64, i64* %8, align 8
  %25 = call i32 @_usbctrl_vendorreq_async_write(%struct.usb_device* %20, i32 %21, i64 %22, i64 %23, i32* %12, i64 %24)
  ret void
}

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @_usbctrl_vendorreq_async_write(%struct.usb_device*, i32, i64, i64, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
